--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <div class="card shadow-lg">
                 <img src="https://v3img.voot.com/resizeMedium,w_960,h_360/jioimage/newcpp/645b781943823c60eda2dd36/645b781943823c60eda2dd36_1683716435206_aa.jpg?imformat=chrome">
                 <div style="background-color: rgb(225, 185, 232);"  class="card-body">
-                  <p class="card-text">Rue gets depressed and watches 22 straight episodes of a British reality show.​ Jules goes to visit an old friend. Cassie looks for advice in the aftermath of Halloween night.</p>
+                  <p class="card-text">Rue gets depressed and watches 22 straight episodes of a British reality show ,​ Jules goes to visit an old friend. Cassie looks for advice in the aftermath of Halloween night.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-dark">Watch</button>
